--- a/style.css
+++ b/style.css
@@ -50,7 +50,14 @@
     margin: 0px 10px 0px 10px;
 }
 #QR-Code {
-    max-width: 70px;
+    max-width: 100px;
 }
-
-  
+#button {
+  background-color: white;  
+  border: 2px solid #E54919;
+  transition-duration: 0.1s;
+}
+#button:hover {
+    background-color: #E54919;
+    color: white;
+  }
