--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     margin: 0px 20px 0px 20px;
 }
 #timeline {
-    color:#4F6267;
+    color: #4F6267;
     font-size: small;
 }
 #timeline-title {
@@ -60,4 +60,8 @@
 #button:hover {
     background-color: #E54919;
     color: white;
-  }
+}
+
+th {
+    width: fit-content;
+}
